<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.specdriven.agent</groupId>
    <artifactId>auto-spec-coding</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>auto-spec-coding</name>
    <description>Java SDK reimplementation of spec-coding-sdk, exposing agent capabilities through multiple interface layers</description>
    <url>https://github.com/kw12121212/auto-spec-coding</url>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>kw12121212</id>
            <name>kw12121212</name>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/kw12121212/auto-spec-coding.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/kw12121212/auto-spec-coding.git</developerConnection>
        <url>https://github.com/kw12121212/auto-spec-coding</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lealone.version>8.0.0-SNAPSHOT</lealone.version>
        <lealone.upstream.commit>53a3f65f581373c5609d3d1837c300177657555b</lealone.upstream.commit>
        <junit.version>5.11.4</junit.version>
    </properties>

    <dependencies>
        <!-- Lealone core -->
        <dependency>
            <groupId>com.lealone</groupId>
            <artifactId>lealone-common</artifactId>
            <version>${lealone.version}</version>
        </dependency>
        <dependency>
            <groupId>com.lealone</groupId>
            <artifactId>lealone-net</artifactId>
            <version>${lealone.version}</version>
        </dependency>
        <dependency>
            <groupId>com.lealone</groupId>
            <artifactId>lealone-db</artifactId>
            <version>${lealone.version}</version>
        </dependency>
        <dependency>
            <groupId>com.lealone</groupId>
            <artifactId>lealone-orm</artifactId>
            <version>${lealone.version}</version>
        </dependency>
        <dependency>
            <groupId>com.lealone</groupId>
            <artifactId>lealone-http</artifactId>
            <version>${lealone.version}</version>
        </dependency>

        <!-- YAML parsing -->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.18.6</version>
        </dependency>

        <!-- Token counting -->
        <dependency>
            <groupId>com.knuddels</groupId>
            <artifactId>jtokkit</artifactId>
            <version>1.1.0</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <id>download-builtin-tools</id>
                        <phase>initialize</phase>
                        <goals><goal>exec</goal></goals>
                        <configuration>
                            <executable>${project.basedir}/scripts/download-builtin-tools.sh</executable>
                            <skip>${skipBuiltinToolsDownload}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <systemPropertyVariables>
                        <junit.jupiter.execution.parallel.enabled>true</junit.jupiter.execution.parallel.enabled>
                        <junit.jupiter.execution.parallel.mode.default>same_thread</junit.jupiter.execution.parallel.mode.default>
                        <junit.jupiter.execution.parallel.mode.classes.default>concurrent</junit.jupiter.execution.parallel.mode.classes.default>
                        <junit.jupiter.execution.parallel.config.strategy>dynamic</junit.jupiter.execution.parallel.config.strategy>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Platform-specific profiles: include only the matching builtin-tools directory -->
        <profile>
            <id>platform-linux-amd64</id>
            <activation>
                <os>
                    <name>linux</name>
                    <arch>amd64</arch>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <configuration>
                            <classifier>linux-x86_64</classifier>
                            <excludes>
                                <exclude>builtin-tools/macos-*/**</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>platform-macos-arm64</id>
            <activation>
                <os>
                    <family>mac</family>
                    <arch>aarch64</arch>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <configuration>
                            <classifier>macos-arm64</classifier>
                            <excludes>
                                <exclude>builtin-tools/linux-*/**</exclude>
                                <exclude>builtin-tools/macos-x86_64/**</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>platform-macos-x86_64</id>
            <activation>
                <os>
                    <family>mac</family>
                    <arch>x86_64</arch>
                </os>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jar-plugin</artifactId>
                        <configuration>
                            <classifier>macos-x86_64</classifier>
                            <excludes>
                                <exclude>builtin-tools/linux-*/**</exclude>
                                <exclude>builtin-tools/macos-arm64/**</exclude>
                            </excludes>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
